--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+#root{
+  overflow: hidden;
+}
+
 * {
   font-family: "Josefin Sans", sans-serif;
   box-sizing: border-box;
@@ -8,6 +12,9 @@
 /* Hero */
 .hero {
   position: relative;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/carrlitos-8c495.appspot.com/o/imagen4.jpg?alt=media&token=a4892dc2-7b44-490b-b1cf-74baf38308d4");
+  background-position: center;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
 }
@@ -19,6 +26,7 @@
 .hero__image {
   width: 100%;
   height: 100%;
+
   object-fit: cover;
   position: absolute;
 }
